--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a href="index.html"><img src="logo2small.png" alt="Vilde Brobacke"></a>
+      <a href="index.html"><img src="logo2Small.png" alt="Vilde Brobacke"></a>
       <a href="https://github.com/madnessbox"><img class="linklogo" src="ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
     </nav>
     <header><img src="logo2.png" alt="Vilde Brobacke"></header>
