--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Vilde Brobacke</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="vildebrobacke.com/style.css">
   </head>
   <body>
     <nav>
