--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Momentum</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="Momentum_poster.jpg" alt="Momentum Poster">
+          <img class="PosterImg" src="Momentum_Poster.jpg" alt="Momentum Poster">
         </div>
 
         <div class="ContentBox">
