--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
       <a href="index.html"><img src="logo2Small.png" alt="Vilde Brobacke"></a>
       <a href="https://github.com/madnessbox"><img class="linklogo" src="ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
     </nav>
-    <header><img src="logo2.png" alt="Vilde Brobacke"></header>
+    <header><img src="Logo2.png" alt="Vilde Brobacke"></header>
     <main>
       <div class="Seperator">
         <img src="FinishedProjectsLogo.png" alt="Projects logo">
       </div>
       <div class="ContentBoxContainer">
 
-        <div class="ContentBox">
+        <div class="SmallContentBox">
           <div class="ContentTextBox">
             <h1>Momentum</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -25,12 +25,20 @@
           <img class="PosterImg" src="Momentum_Poster.jpg" alt="Momentum Poster">
         </div>
 
-        <div class="ContentBox">
+        <div class="SmallContentBox">
           <div class="ContentTextBox">
             <h1>Ursa Minor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <img class="PosterImg" src="UM_poster.jpg" alt="Ursa Minor Poster">
+        </div>
+
+        <div class="SmallContentBox">
+          <div class="ContentTextBox">
+            <h1>Swap: The Game</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          </div>
+          <img class="PosterImg" src="SwapTheGame.png" alt="Swap: The Game">
         </div>
       </div>
 
@@ -60,7 +68,7 @@
             <h1>Projection rendering</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="RacerCurvesFaster.gif" alt="Racer Curves">
+          <img src="TinyRacer.png" alt="Racer Curves">
         </div>
 
         <div class="ContentBox">
@@ -70,6 +78,8 @@
           </div>
           <img src="GeneticAlgorithmNoUI.png" alt="Genetic Algoritm">
         </div>
+
+
       </div>
 
 
