--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
   </head>
   <body>
     <nav>
-      <a href="index.html"><img src="logo2Small.png" alt="Vilde Brobacke"></a>
-      <a href="https://github.com/madnessbox"><img class="linklogo" src="ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
+      <a href="index.html"><img src="Images/Logos/logo2Small.png" alt="Vilde Brobacke"></a>
+      <a href="https://github.com/madnessbox"><img class="linklogo" src="Images/Logos/ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
     </nav>
-    <header><img src="Logo2.png" alt="Vilde Brobacke"></header>
+    <header><img src="Images/Logos/Logo2.png" alt="Vilde Brobacke"></header>
     <main>
       <div class="Seperator">
-        <img src="FinishedProjectsLogo.png" alt="Projects logo">
+        <img src="Images/Logos/FinishedProjectsLogo.png" alt="Projects logo">
       </div>
       <div class="ContentBoxContainer">
 
@@ -22,7 +22,7 @@
             <h1>Momentum</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="Momentum_Poster.jpg" alt="Momentum Poster">
+          <img class="PosterImg" src="Images/Momentum/Momentum_Poster.jpg" alt="Momentum Poster">
         </div>
 
         <div class="SmallContentBox">
@@ -30,7 +30,7 @@
             <h1>Ursa Minor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="UM_poster.jpg" alt="Ursa Minor Poster">
+          <img class="PosterImg" src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster">
         </div>
 
         <div class="SmallContentBox">
@@ -38,12 +38,12 @@
             <h1>Swap: The Game</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="SwapTheGame.png" alt="Swap: The Game">
+          <img class="PosterImg" src="Images/SwaptheGame/SwapTheGame.png" alt="Swap: The Game">
         </div>
       </div>
 
       <div class="Seperator">
-        <img src="PersonalProjectsLogo.png" alt="Projects logo">
+        <img src="Images/Logos/PersonalProjectsLogo.png" alt="Projects logo">
       </div>
 
       <div class="ContentBoxContainer">
@@ -52,7 +52,7 @@
             <h1>OpenGL</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="OpenGL.png" alt="OpenGl">
+          <img src="Images/OpenGL/OpenGL.png" alt="OpenGl">
         </div>
 
         <div class="ContentBox">
@@ -60,7 +60,7 @@
             <h1>RayMarching</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="RayMarching.png" alt="RayMarching">
+          <img src="Images/RayMarching/RayMarching.png" alt="RayMarching">
         </div>
 
         <div class="ContentBox">
@@ -68,7 +68,7 @@
             <h1>Projection rendering</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="TinyRacer.png" alt="Racer Curves">
+          <img src="Images/ProjectionRendering/TinyRacer.png" alt="Racer Curves">
         </div>
 
         <div class="ContentBox">
@@ -76,7 +76,7 @@
             <h1>Genetic Algorithm</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="GeneticAlgorithmNoUI.png" alt="Genetic Algoritm">
+          <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png" alt="Genetic Algoritm">
         </div>
 
 
