--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h1>Momentum</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="Images/Momentum/Momentum_Poster.jpg" alt="Momentum Poster">
+          <a href="Pages/Momentum.html"><img src="Images/Momentum/Momentum_Poster.jpg" alt="Momentum Poster"></a>
         </div>
 
         <div class="SmallContentBox">
@@ -30,7 +30,7 @@
             <h1>Ursa Minor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster">
+        <a href="Pages/Momentum.html"><img src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster"></a>
         </div>
 
         <div class="SmallContentBox">
@@ -38,7 +38,7 @@
             <h1>Swap: The Game</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img class="PosterImg" src="Images/SwaptheGame/SwapTheGame.png" alt="Swap: The Game">
+        <a href="Pages/Momentum.html"><img src="Images/SwaptheGame/SwapTheGame.png" alt="Swap: The Game"></a>
         </div>
       </div>
 
@@ -52,7 +52,7 @@
             <h1>OpenGL</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="Images/OpenGL/OpenGL.png" alt="OpenGl">
+          <a href="Pages/Momentum.html"><img src="Images/OpenGL/OpenGL.png" alt="OpenGl"></a>
         </div>
 
         <div class="ContentBox">
@@ -60,7 +60,7 @@
             <h1>RayMarching</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="Images/RayMarching/RayMarching.png" alt="RayMarching">
+          <a href="Pages/Momentum.html"><img src="Images/RayMarching/RayMarching.png" alt="RayMarching"></a>
         </div>
 
         <div class="ContentBox">
@@ -68,7 +68,7 @@
             <h1>Projection rendering</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="Images/ProjectionRendering/TinyRacer.png" alt="Racer Curves">
+          <a href="Pages/Momentum.html"><img src="Images/ProjectionRendering/TinyRacer.png" alt="Racer Curves"></a>
         </div>
 
         <div class="ContentBox">
@@ -76,7 +76,7 @@
             <h1>Genetic Algorithm</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-          <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png" alt="Genetic Algoritm">
+          <a href="Pages/Momentum.html"><img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png" alt="Genetic Algoritm"></a>
         </div>
 
 
