--- a/Pages/Momentum.html
+++ b/Pages/Momentum.html
@@ -10,9 +10,17 @@
       <a href="../index.html"><img src="../Images/Logos/logo2Small.png" alt="Vilde Brobacke"></a>
       <a href="https://github.com/madnessbox"><img class="linklogo" src="../Images/Logos/ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
     </nav>
-    <header><img src="../Images/Logos/Logo2.png" alt="Vilde Brobacke"></header>
+    <header><h1>Momentum</h1></header>
     <main>
-
+      <div class="BigContentBox">
+        <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</h2>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/CVb64POY_eU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <div class="TextBox">
+          <h3>Sub Title</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <img src="../Images/Momentum/Momentum_Menu.png" alt="Momentum Menu Screenshot">
+      </div>
     <main>
   </body>
 </html>
