removed swap the game

--- a/index.html
+++ b/index.html
@@ -24,29 +24,27 @@
           </div>
           <a href="Pages/Momentum.html"><img src="Images/Momentum/Momentum_Poster.jpg" alt="Momentum Poster"></a>
         </div>
-
         <div class="SmallContentBox">
           <div class="ContentTextBox">
             <h1>Ursa Minor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
-        <a href="Pages/Momentum.html"><img src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster"></a>
+          <a href="Pages/Momentum.html"><img src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster"></a>
         </div>
-
-        <div class="SmallContentBox">
+        <!--<div class="SmallContentBox">
           <div class="ContentTextBox">
             <h1>Swap: The Game</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
         <a href="Pages/Momentum.html"><img src="Images/SwaptheGame/SwapTheGame.png" alt="Swap: The Game"></a>
-        </div>
-      </div>
+      </div>-->
 
+      </div>
       <div class="Seperator">
         <img src="Images/Logos/PersonalProjectsLogo.png" alt="Projects logo">
       </div>
-
       <div class="ContentBoxContainer">
+
         <div class="ContentBox">
           <div class="ContentTextBox">
             <h1>OpenGL</h1>
@@ -79,10 +77,7 @@
           <a href="Pages/Momentum.html"><img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png" alt="Genetic Algoritm"></a>
         </div>
 
-
       </div>
-
-
     <main>
   </body>
 </html>
