--- a/index.html
+++ b/index.html
@@ -15,68 +15,57 @@
       <div class="Seperator">
         <img src="Images/Logos/FinishedProjectsLogo.png" alt="Projects logo">
       </div>
-      <div class="ContentBoxContainer">
 
+      <div class="ContentBoxContainer">
         <div class="SmallContentBox">
           <div class="ContentTextBox">
             <h1>Momentum</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <a href="Pages/Momentum.html"><img src="Images/Momentum/Momentum_Poster.jpg" alt="Momentum Poster"></a>
-        </div>
+        </div> <!-- Momentum -->
         <div class="SmallContentBox">
           <div class="ContentTextBox">
             <h1>Ursa Minor</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <a href="Pages/Momentum.html"><img src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster"></a>
-        </div>
-        <!--<div class="SmallContentBox">
-          <div class="ContentTextBox">
-            <h1>Swap: The Game</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-        <a href="Pages/Momentum.html"><img src="Images/SwaptheGame/SwapTheGame.png" alt="Swap: The Game"></a>
-      </div>-->
-
+        </div> <!-- Ursa Minor -->
       </div>
+
       <div class="Seperator">
         <img src="Images/Logos/PersonalProjectsLogo.png" alt="Projects logo">
       </div>
-      <div class="ContentBoxContainer">
 
+      <div class="ContentBoxContainer">
         <div class="ContentBox">
           <div class="ContentTextBox">
             <h1>OpenGL</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <a href="Pages/Momentum.html"><img src="Images/OpenGL/OpenGL.png" alt="OpenGl"></a>
-        </div>
-
+        </div> <!-- OpenGL -->
         <div class="ContentBox">
           <div class="ContentTextBox">
             <h1>RayMarching</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <a href="Pages/RayMarching.html"><img src="Images/RayMarching/RayMarching.png" alt="RayMarching"></a>
-        </div>
-
+        </div> <!-- RayMarching -->
         <div class="ContentBox">
           <div class="ContentTextBox">
             <h1>Projection rendering</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <a href="Pages/Momentum.html"><img src="Images/ProjectionRendering/TinyRacer.png" alt="Racer Curves"></a>
-        </div>
-
+        </div> <!-- ProjectionRendering -->
         <div class="ContentBox">
           <div class="ContentTextBox">
             <h1>Genetic Algorithm</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
           </div>
           <a href="Pages/Momentum.html"><img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png" alt="Genetic Algoritm"></a>
-        </div>
-
+        </div> <!-- GeneticAlgorithm -->
       </div>
     <main>
   </body>
