--- a/indexSimple.html
+++ b/indexSimple.html
@@ -13,7 +13,7 @@
         </nav>
 
         <div class="Seperator">
-            <h2>Finished Projects</h2>
+            <h1>Projects</h1>
         </div>
 
         <div class="Projects">
@@ -26,35 +26,25 @@
         </div>
 
         <div class="Seperator">
-            <h2>Personal Projects</h2>
+            <h1>Experiments</h1>
         </div>
 
         <div class="Projects">
-            <div class="ProjectBox">
+            <div class="ExperimentBox">
                 <img src="Images/OpenGL/OpenGL.png">
             </div>
 
-            <div class="ProjectBox">
+            <div class="ExperimentBox">
                 <img src="Images/RayMarching/RayMarching.png">
             </div>
 
-            <div class="ProjectBox">
-                <img src="Images/RayMarching/RayMarching.png">
+            <div class="ExperimentBox">
+                <img src="Images/ProjectionRendering/TinyRacer.png">
             </div>
 
-            <div class="ProjectBox">
-                <img src="Images/RayMarching/RayMarching.png">
+            <div class="ExperimentBox">
+                <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png">
             </div>
-
-            <div class="ProjectBox">
-                <img src="Images/RayMarching/RayMarching.png">
-            </div>
-
-            <div class="ProjectBox">
-                <img src="Images/RayMarching/RayMarching.png">
-            </div>
-
-
         </div>
 
     </main>
