--- a/Pages/Momentum.html
+++ b/Pages/Momentum.html
@@ -3,35 +3,38 @@
   <head>
     <meta charset="utf-8">
     <title>Vilde Brobacke</title>
-    <link rel="stylesheet" href="../Style.css">
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <nav>
-      <a href="../index.html"><img src="../Images/Logos/logo2Small.png" alt="Vilde Brobacke"></a>
-      <a href="https://github.com/madnessbox"><img class="linklogo" src="../Images/Logos/ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
-    </nav>
-    <header><h1>Momentum</h1></header>
     <main>
-      <div class="DetailsBox">
-        <div>
-          <h2>Programming</h2>
-        </div>
-        <div class="vl">
+        <nav>
+            <a href="../index.html"><img class="LogoSmall" src="../Images/Logos/Logo2.png"></a>
+            <a href="/Pages/About.html"><h2>About me</h2></a>
+            <a href="/Pages/Contact.html"><h2>Contact me</h2></a>
+        </nav>
+        
+        <img class="Logo" style="width: 50%" src="../Images/Momentum/Momentum_Logo.png">
 
+        <div class="ContentBox">
+            <img src="../Images/Momentum/Momentum_Menu.png">
+            <h3>Momentum is a light puzzle platformer, set in a strange place where the technology is run on the forces of time. In order to sustain it, time has been harvested from several timelines. Due to this large harvest, the time continuum has started to fall apart. 
+            <br><br>
+            It is up to you to to find the time vault and release time back into the world. You will face challenges as you traverse this strange world in your search for all of the locks which are keeping the vault closed. They will test your ability in timing and planning. 
+            <br><br>
+            To your aid, you have a tool which can directly control the time energy the technology is run on. But the tool’s power is not unlimited, it can only control one object at a time, and due to its restrictions, you need to carefully time and plan in order to progress. 
+            <br><br>
+            Act quickly, but not without consideration, as any misstep might bring you to your doom, and when you fail, so will everything that ever existed. As history crumbles, so will the future it supports. 
+            </h3>
         </div>
-        <div>
-          <h2>Unity / C#</h2>
+
+        <div class="ContentBox">
+            <h3>This game was a school project that I worked together with 11 other people on over the course of 8 weeks. I mainly worked with creating tools with and for our level designer. 
+            <br><br>
+            The game idéa wasn't fully fledged out until a couple of weeks into the project, this required the programmers in the group to work on features in a way where a change of mechanics or simmlar wouldn't invalidate our work. This lead to us creating all the features, mechanics and tools in a highly modular and event-based way. This way, our designers could play around with the features and use them in multiple ways to help them decide on the final goal of the game.
+            </h3>
+            <img style="width: 30%" src="../Images/Momentum/RotationToolSnap.gif">
         </div>
-      </div>
-      <div class="BigContentBox">
-        <h2>Momentum is a puzzle-platformer set in the not so distant future.</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/CVb64POY_eU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <div class="TextBox">
-          <h3>Sub Title</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <img src="../Images/Momentum/Momentum_Menu.png" alt="Momentum Menu Screenshot">
-      </div>
-    <main>
+        
+    </main>
   </body>
 </html>
