--- a/index.html
+++ b/index.html
@@ -3,70 +3,51 @@
   <head>
     <meta charset="utf-8">
     <title>Vilde Brobacke</title>
-    <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <nav>
-      <a href="index.html"><img src="Images/Logos/logo2Small.png" alt="Vilde Brobacke"></a>
-      <a href="https://github.com/madnessbox"><img class="linklogo" src="Images/Logos/ghlogosmallinverted.png" alt="Vilde Brobacke"></a>
-    </nav>
-    <header><img src="Images/Logos/Logo2.png" alt="Vilde Brobacke"></header>
     <main>
-      <div class="Seperator">
-        <img src="Images/Logos/FinishedProjectsLogo.png" alt="Projects logo">
-      </div>
+        
+        <img class="Logo" src="Images/Logos/Logo2.png">
+        <nav>
+            <a href="/Pages/About.html"><h2>About me</h2></a>
+            <a href="/Pages/Contact.html"><h2>Contact me</h2></a>
+        </nav>
+        <div class="Seperator">
+            <img src="Images/Logos/ProjectsLogo.png">
+        </div>
 
-      <div class="ContentBoxContainer">
-        <div class="SmallContentBox">
-          <div class="ContentTextBox">
-            <h1>Momentum</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <a href="Pages/Momentum.html"><img src="Images/Momentum/Momentum_Poster.jpg" alt="Momentum Poster"></a>
-        </div> <!-- Momentum -->
-        <div class="SmallContentBox">
-          <div class="ContentTextBox">
-            <h1>Ursa Minor</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <a href="Pages/Momentum.html"><img src="Images/UrsaMinor/UM_poster.jpg" alt="Ursa Minor Poster"></a>
-        </div> <!-- Ursa Minor -->
-      </div>
+        <div class="Projects">
+            <div class="ProjectBox">
+                <a href="Pages/Momentum.html"><img class="Poster" src="Images/Momentum/Momentum_Poster.jpg"></a>
+            </div>
+            <div class="ProjectBox">
+                <a href="Pages/UrsaMinor.html"><img class="Poster" src="Images/UrsaMinor/UM_poster.jpg"></a>
+            </div>
+        </div>
 
-      <div class="Seperator">
-        <img src="Images/Logos/PersonalProjectsLogo.png" alt="Projects logo">
-      </div>
+        <div class="Seperator">
+            <img src="Images/Logos/Experiments.png">
+        </div>
 
-      <div class="ContentBoxContainer">
-        <div class="ContentBox">
-          <div class="ContentTextBox">
-            <h1>OpenGL</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <a href="Pages/Momentum.html"><img src="Images/OpenGL/OpenGL.png" alt="OpenGl"></a>
-        </div> <!-- OpenGL -->
-        <div class="ContentBox">
-          <div class="ContentTextBox">
-            <h1>RayMarching</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <a href="Pages/RayMarching.html"><img src="Images/RayMarching/RayMarching.png" alt="RayMarching"></a>
-        </div> <!-- RayMarching -->
-        <div class="ContentBox">
-          <div class="ContentTextBox">
-            <h1>Projection rendering</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <a href="Pages/Momentum.html"><img src="Images/ProjectionRendering/TinyRacer.png" alt="Racer Curves"></a>
-        </div> <!-- ProjectionRendering -->
-        <div class="ContentBox">
-          <div class="ContentTextBox">
-            <h1>Genetic Algorithm</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-          </div>
-          <a href="Pages/Momentum.html"><img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png" alt="Genetic Algoritm"></a>
-        </div> <!-- GeneticAlgorithm -->
-      </div>
-    <main>
+        <div class="Projects">
+            <div class="ExperimentBox">
+                <img src="Images/OpenGL/OpenGL.png">
+            </div>
+
+            <div class="ExperimentBox">
+                <img src="Images/RayMarching/RayMarching.png">
+            </div>
+
+            <div class="ExperimentBox">
+                <img src="Images/ProjectionRendering/TinyRacer.png">
+            </div>
+
+            <div class="ExperimentBox">
+                <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png">
+            </div>
+        </div>
+
+    </main>
   </body>
 </html>
