--- a/Pages/Contact.html
+++ b/Pages/Contact.html
@@ -8,17 +8,17 @@
   <body>
     <main>
         <nav>
-            <a href="../index.html"><img class="LogoSmall" src="../Images/Logos/Logo2.png"></a>
+            <a href="../index.html"><img class="LogoSmall" src="../Images/Logos/Logo3.png"></a>
             <a href="/Pages/About.html"><h2>About me</h2></a>
             <a href="/Pages/Contact.html"><h2>Contact me</h2></a>
         </nav>
         
-        <img class="Logo" style="width: 40%" src="../Images/Logos/ContactMe.png">
+        <img class="Logo" style="width: 40%" src="../Images/Logos/ContactMe2.png">
 
         <div class="ContentBox" style="flex-direction: column">
             <a href="https://github.com/madnessbox"><img src="../Images/Logos/GHLogoInverted.png" style="width: 100px;"></a>
-            <h3>Email: vildebrobacke@gmail.com</h3>
-            <h3>Phone: (+46)76 043 52 47</h3>
+            <h3 style="padding: 0;">Email: vildebrobacke@gmail.com</h3>
+            <h3 style="padding: 0;">Phone: (+46)76 043 52 47</h3>
         </div>
         
     </main>
