pseudo 3D link at index

--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
 
         <div class="Projects">
             <div class="ExperimentBox">
+                <a href="Pages/Pseudo3D.html"><img src="Images/ProjectionRendering/TinyRacer.png"></a>
+            </div>
+            
+            <div class="ExperimentBox">
                 <img src="Images/OpenGL/OpenGL.png">
             </div>
 
             <div class="ExperimentBox">
                 <img src="Images/RayMarching/RayMarching.png">
-            </div>
-
-            <div class="ExperimentBox">
-                <img src="Images/ProjectionRendering/TinyRacer.png">
             </div>
 
             <div class="ExperimentBox">
