--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <main>
-        
+        ---------
         <img class="Logo" src="Images/Logos/Logo3.png">
         <nav>
             <a href="/Pages/About.html"><h2>About me</h2></a>
@@ -33,18 +33,22 @@
         <div class="Projects">
             <div class="ExperimentBox">
                 <a href="Pages/Pseudo3D.html"><img src="Images/ProjectionRendering/TinyRacer.png"></a>
+                <h2>Pseudo-3D Racer</h2>
             </div>
             
             <div class="ExperimentBox">
                 <img src="Images/OpenGL/OpenGL.png">
+                <h2>OpenGL</h2>
             </div>
 
             <div class="ExperimentBox">
                 <img src="Images/RayMarching/RayMarching.png">
+                <h2>Raymarching</h2>
             </div>
 
             <div class="ExperimentBox">
                 <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png">
+                <h2>Genetic Algorithm</h2>
             </div>
         </div>
 
