--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
   </head>
   <body>
     <main>
-        ---------
         <img class="Logo" src="Images/Logos/Logo3.png">
         <nav>
             <a href="/Pages/About.html"><h2>About me</h2></a>
@@ -20,9 +19,18 @@
         <div class="Projects">
             <div class="ProjectBox">
                 <a href="Pages/Momentum.html"><img class="Poster" src="Images/Momentum/Momentum_Poster.jpg"></a>
+                <h2>Momentum</h2>
+                <h3 style="color: #e44d2c">C# / Unity</h3>
             </div>
             <div class="ProjectBox">
                 <a href="Pages/UrsaMinor.html"><img class="Poster" src="Images/UrsaMinor/UM_poster.jpg"></a>
+                <h2>Ursa Minor</h2>
+                <h3 style="color: #e44d2c">C++ / Unreal Engine 4</h3>
+            </div>
+            <div class="ProjectBox">
+                <a href="Pages/UrsaMinor.html"><img class="Poster" src="Images/VHS/Logo2.png"></a>
+                <h2>V.H.S - Virtual Human Soccer</h2>
+                <h3 style="color: #e44d2c">C#/ Unity</h3>
             </div>
         </div>
 
@@ -34,21 +42,25 @@
             <div class="ExperimentBox">
                 <a href="Pages/Pseudo3D.html"><img src="Images/ProjectionRendering/TinyRacer.png"></a>
                 <h2>Pseudo-3D Racer</h2>
+                <h3 style="color: #e44d2c">C++ / SDL</h3>
             </div>
             
             <div class="ExperimentBox">
                 <img src="Images/OpenGL/OpenGL.png">
-                <h2>OpenGL</h2>
+                <h2>Basic Rendering</h2>
+                <h3 style="color: #e44d2c">C++ / OpenGL</h3>
             </div>
 
             <div class="ExperimentBox">
                 <img src="Images/RayMarching/RayMarching.png">
                 <h2>Raymarching</h2>
+                <h3 style="color: #e44d2c">C++ / OpenGL</h3>
             </div>
 
             <div class="ExperimentBox">
                 <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png">
                 <h2>Genetic Algorithm</h2>
+                <h3 style="color: #e44d2c">C# / Unity</h3>
             </div>
         </div>
 
