Changed layout and added content

--- a/Pages/UrsaMinor.html
+++ b/Pages/UrsaMinor.html
@@ -16,7 +16,7 @@
         <img class="Logo" style="width: 30%" src="../Images/UrsaMinor/UrsaMinor_Logo.png">
 
         <div class="ContentBox">
-            <iframe width="2000" height="336" src="https://www.youtube.com/embed/FbA0oBlprug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="100%" height="750" src="https://www.youtube.com/embed/FbA0oBlprug" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h3>Ursa Minor is a puzzle adventure game, in which you must find your way back home to the starry night sky. However, you’re weak to the sunlight and must move in the shadows to stay unharmed. Luckily, you have the power to change the direction of the sunlight. With this power you can control both light and shadow to interact with your environment to clear your way back home.  
             </h3>
         </div>
