--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h3 style="color: #e44d2c">C++ / Unreal Engine 4</h3>
             </div>
             <div class="ProjectBox">
-                <a href="Pages/UrsaMinor.html"><img class="Poster" src="Images/VHS/VHSLogo.png" style="Height: 700px"></a>
+                <a href="Pages/VHS.html"><img class="Poster" src="Images/VHS/LogoGif.gif" style="Height: 700px"></a>
                 <h2>V.H.S - Virtual Human Soccer</h2>
                 <h3 style="color: #e44d2c">C# / Unity</h3>
             </div>
