added second transparency gif

--- a/Pages/RayMarching.html
+++ b/Pages/RayMarching.html
@@ -47,6 +47,7 @@
             <h2>First I tried making some translucent objects:</h2>
             <div class="ContentImg" >
                 <img src="../Images/RayMarching/FirstTransparency.gif" style="width: 50%">
+                <img src="../Images/RayMarching/Transparency2.gif" style="width: 50%">
             </div>
             <h3>These work by instead of stopping the ray when hitting the surface of an object, continuing to march through and count how many steps are taken inside of every object, then using that counter as a multiplier on the color of that object. Ultimatly summing together all the "object colors" that were stepped through. This means that the thinner an object is, the less its color will contribute to the final summarized color of the pixel.</h3>
             
