--- a/Pages/RayMarching.html
+++ b/Pages/RayMarching.html
@@ -60,7 +60,7 @@
                 <img src="../Images/RayMarching/ballsReflection3.gif" style="width: 50%">
                 <img src="../Images/RayMarching/ballsReflection4.gif" style="width: 50%">
             </div>
-            <h3>I think this ended up looking suprisingly cool. You can also see that I am stricktly summarizing the color of every surface in these examples ultimatley making reflections brighter and brighter as they bounce, wich is not realistic.</h3>
+            <h3>I think this ended up looking suprisingly cool. You can also see that I am stricktly summarizing the color of every surface in these examples (not considering light attenuation or enery-loss) ultimatley making reflections brighter and brighter as they bounce, wich is not realistic.</h3>
         </div> 
         
         <div class="ContentBox" style="text-align: center">
