Wrote Pseudo3D page

--- a/Pages/Momentum.html
+++ b/Pages/Momentum.html
@@ -107,8 +107,10 @@
                     </pre>
                 </div>
             </div>
-            <img style="width: 30%" src="../Images/Momentum/RotationToolSnap.gif">
-            <img style="width: 30%" src="../Images/Momentum/PathFollowerGif.gif">
+            <div style="justify-content: center; align-content: center; align-items: center">
+                <img style="width: 49%" src="../Images/Momentum/RotationToolSnap.gif">
+                <img style="width: 49%" src="../Images/Momentum/PathFollowerGif.gif">
+            </div>
         </div>
         
         <div class="ContentBox">
