--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
                 <h2>Momentum</h2>
                 <h3 style="color: #e44d2c">C# / Unity</h3>
             </div>
-            <div class="ProjectBox">
-                <a href="Pages/UrsaMinor.html"><img class="Poster" src="Images/UrsaMinor/UM_poster.jpg"></a>
+            <div class="ProjectBox noHover">
+                <a><img class="Poster" src="Images/UrsaMinor/UM_poster.jpg"></a>
+                <div class="UnderConstruction">
+                    <h1>UNDER CONSTRUCTION</h1>
+                </div>
                 <h2>Ursa Minor</h2>
                 <h3 style="color: #e44d2c">C++ / Unreal Engine 4</h3>
             </div>
@@ -45,8 +48,11 @@
                 <h3 style="color: #e44d2c">C++ / SDL</h3>
             </div>
             
-            <div class="ExperimentBox">
+            <div class="ExperimentBox noHover">
                 <img src="Images/OpenGL/OpenGL.png">
+                <div class="UnderConstruction">
+                    <h1>UNDER CONSTRUCTION</h1>
+                </div>
                 <h2>Basic Rendering</h2>
                 <h3 style="color: #e44d2c">C++ / OpenGL</h3>
             </div>
@@ -57,8 +63,11 @@
                 <h3 style="color: #e44d2c">C++ / OpenGL</h3>
             </div>
 
-            <div class="ExperimentBox">
+            <div class="ExperimentBox noHover">
                 <img src="Images/GeneticAlgorithm/GeneticAlgorithmNoUI.png">
+                <div class="UnderConstruction">
+                    <h1>UNDER CONSTRUCTION</h1>
+                </div>
                 <h2>Genetic Algorithm</h2>
                 <h3 style="color: #e44d2c">C# / Unity</h3>
             </div>
