Wrote lessons learned for Momentum

--- a/Pages/Momentum.html
+++ b/Pages/Momentum.html
@@ -113,16 +113,13 @@
             </div>
         </div>
         
-        <div class="ContentBox">
-            <div class="ContentTextBox">
-                <h1>Lessons Learned</h1>
-                <h3>During this project we had our ups and downs. But the major lesson that I learnt was to really check your resources before settling on an idea. What I mean by this is that we really liked the idea of the main mechanic (being able to rotate the sunlight), but we didn't really have the right people to execute the idéa fully.
-                <br><br>
-                Only one of our 3 designers were actually intrested in doing level design, wich we didn't realize before already settling on- and starting to build the project. This was an issue since our game was mainly a puzzle game. (Not so) suprisingly, puzzle games require lots and lots of level design to make it intresting. This was the projects main downfall.
-                <br><br>
-                So, how have I used this knowledge in my projects since this one? Well, I know always make sure everyone in the team gets to show to the rest what they are intrested in making / has the knowledge we need to make the project before we settle on an idea too quickly.
-                </h3>
-            </div>
+        <div class="ContentBox" style="text-align: center; align-items: center;">
+            <h1>Lessons Learned</h1>
+            <h3 style="width: 70%">The biggest challenge we faced during this project was that we struggled "finding the fun" in the game, whilst also having somewhat a confilct of intrest amongst the members. 
+            </h3>
+            <h2 style="padding-bottom: 0; margin-bottom: 0">Why did we struggle finding the fun?</h2>
+            <h3 style="padding-top: 0; margin-top: 0">The main reason for this was the fact that we were building too many things in too many directions at once. Basically, we weren't completley on the same page with what the game was supposed to be. One example of this was how one of our designers really wanted to incorporate much more in-depth storytelling then what we had time for. This lead to one of our programmers spending almost a week at developing a fully fledged AI-dialouge system. The idea behind this was for the tool you use in the game to be a companion that sometimes talked to the player, but we simply didn't have enough time to fully develop this feature, and therefore had to completley scrap it.
+            </h3>
         </div>
         
     </main>
