Added skelnet and more momentum content

--- a/index.html
+++ b/index.html
@@ -22,13 +22,10 @@
                 <h2>Momentum</h2>
                 <h3 style="color: #e44d2c">C# / Unity</h3>
             </div>
-            <div class="ProjectBox noHover">
-                <a><img class="Poster" src="Images/UrsaMinor/UM_poster.jpg"></a>
-                <div class="UnderConstruction">
-                    <h1>UNDER CONSTRUCTION</h1>
-                </div>
-                <h2>Ursa Minor</h2>
-                <h3 style="color: #e44d2c">C++ / Unreal Engine 4</h3>
+            <div class="ProjectBox">
+                <a href="Pages/SkelNet.html"><img class="Poster" src="Images/SkelNet/SkelnetLogo.jpg"></a>
+                <h2>SkelNet</h2>
+                <h3 style="color: #e44d2c">C++ / SDL</h3>
             </div>
             <div class="ProjectBox">
                 <a href="Pages/VHS.html"><img class="Poster" src="Images/VHS/LogoGif.gif" style="Height: 700px"></a>
